<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/material_dynamic_neutral90">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextView" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastNameTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewEdit" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Изменить"/>
</androidx.appcompat.widget.LinearLayoutCompat>